--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,34 +1,48 @@
+# basic settings
+set-option -g status-keys emacs
+
+# cycle last window
 bind-key C-b last-window
 
-# Bind escape to copy-mode.
+# bind escape to copy-mode
 unbind [
 bind Escape copy-mode
 
-# Remove default binding since we're replacing.
+# reload config
+#bind r source-file ~/.tmux.conf
+
+# remove default binding since we're replacing.
 unbind %
 bind | split-window -h
 bind - split-window -v
 
-# Set status bar.
+# ctrl+left/right cycles thru windows
+bind-key -n C-right next
+bind-key -n C-left prev
+
+# open a man page in new window
+bind / command-prompt "split-window 'exec man %%'"
+
+# set status bar
 set -g status-bg black
 set -g status-fg white
 set -g status-left '#[fg=green]#H'
 
-# Highlight active window.
+# status bar info
+set -g status-right '#[fg=yellow]#(uptime | cut -d "," -f 2-)#[default] #[fg=blue]#(date "+%H:%M:%S")#[default]'
+
+# highlight active window
 set-window-option -g window-status-current-bg red
 
-# Status bar info.
-set -g status-right '#[fg=yellow]#(uptime | cut -d "," -f 2-)'
-
-# Set window notifications.
+# set window notifications
 setw -g monitor-activity on
 set -g visual-activity on
 
-# Automatically set window title.
+# automatically set window title
 setw -g automatic-rename on
 
-# Screen color.
+# screen color
 set -g default-terminal "screen-256color"
 
-# Mouse scroll.
-setw -g mode-mouse on
+# mouse scroll
+#setw -g mode-mouse on
