--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,9 +8,6 @@ bind-key C-b last-window
 unbind [
 bind Escape copy-mode
 
-# reload config
-#bind r source-file ~/.tmux.conf
-
 # remove default binding since we're replacing.
 unbind %
 bind | split-window -h
@@ -27,9 +24,8 @@ bind / command-prompt "split-window 'exec man %%'"
 set -g status-bg black
 set -g status-fg white
 set -g status-left '#[fg=green]#H'
-
-# status bar info
-set -g status-right '#[fg=yellow]#(uptime | cut -d "," -f 2-)#[default] #[fg=blue]#(date "+%H:%M:%S")#[default]'
+set -g status-right '#[fg=yellow]#(uptime | cut -d "," -f 2-)#[default] #(date "+%H:%M")'
+set -g status-right-length 64
 
 # highlight active window
 set-window-option -g window-status-current-bg red
@@ -43,6 +39,3 @@ setw -g automatic-rename on
 
 # screen color
 set -g default-terminal "screen-256color"
-
-# mouse scroll
-#setw -g mode-mouse on
