--- a/.gitconfig
+++ b/.gitconfig
@@ -2,8 +2,26 @@
   name = logaritmisk
   email = anders.e.olsson@gmail.com
 
-[color]
-  ui = auto
-
 [alias]
   hist = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short
+
+[color]
+  branch = auto
+  diff = auto
+  status = auto
+
+[color "branch"]
+  current = yellow reverse
+  local = yellow
+  remote = green
+
+[color "diff"]
+  meta = yellow bold
+  frag = magenta bold
+  old = red bold
+  new = green bold
+
+[color "status"]
+  added = yellow
+  changed = green
+  untracked = cyan
