lets try fish. might be good, might be awesome, might be crap. 66% chance for a positive result, i like!

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 *
+!.config/
+!.config/fish/
+!.config/fish/config.fish
+!.emacs
+!.emacs.d/
+!.emacs.d/*
 !.gitignore
 !.gitconfig
-!.emacs
-!.emacs.d
-!.emacs.d/*
 !.vimrc
 !.profile
 !.inputrc
