--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,10 +21,10 @@ bind-key -n C-left prev
 bind / command-prompt "split-window 'exec man %%'"
 
 # set status bar
-set -g status-bg black
-set -g status-fg white
-set -g status-left '#[fg=green]#H'
-set -g status-right '#[fg=yellow]#(uptime | cut -d "," -f 2-)#[default] #(date "+%H:%M")'
+set -g status-bg colour250
+set -g status-fg colour0
+set -g status-left '#H'
+set -g status-right '#(uptime | cut -d "," -f 2-) #(date "+%H:%M")'
 set -g status-right-length 64
 
 # highlight active window
