--- a/.gitconfig
+++ b/.gitconfig
@@ -3,7 +3,8 @@
   email = anders.e.olsson@gmail.com
 
 [alias]
-  hist = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short
+  hlg = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short
+  plg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --
 
 [color]
   branch = auto
