change some colors

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,8 +27,13 @@ set -g status-left '#H'
 set -g status-right '#(uptime | cut -d "," -f 2-) #(date "+%H:%M")'
 set -g status-right-length 64
 
+# border colours
+set -g pane-border-fg colour233
+set -g pane-active-border-fg colour235
+
 # highlight active window
 set-window-option -g window-status-current-bg red
+set-window-option -g window-status-current-fg white
 
 # set window notifications
 setw -g monitor-activity on
