update tmux conf with new colors

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,8 +28,8 @@ set -g status-right '#(uptime | cut -d "," -f 2-) #(date "+%H:%M")'
 set -g status-right-length 64
 
 # border colours
-set -g pane-border-fg colour233
-set -g pane-active-border-fg colour235
+set -g pane-border-fg colour234
+set -g pane-active-border-fg colour236
 
 # highlight active window
 set-window-option -g window-status-current-bg red
@@ -44,3 +44,6 @@ setw -g automatic-rename on
 
 # screen color
 set -g default-terminal "screen-256color"
+
+# reload script
+bind-key r source-file ~/.tmux.conf
