whoa, a lot of changes, mainly for emacs

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,3 +47,6 @@ set -g default-terminal "screen-256color"
 
 # reload script
 bind-key r source-file ~/.tmux.conf
+
+# aggressive resize please
+setw -g aggressive-resize on
