smaaaaall changs to ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,20 @@
 *
-!.config/
-!.config/fish/
-!.config/fish/config.fish
-!.emacs
-!.emacs.d/
-!.emacs.d/*
-!.gitignore
-!.gitconfig
-!.vimrc
-!.profile
-!.inputrc
-!.htoprc
-!.bash_aliases
-!.tmux.conf
-!.ext
-!.ext/*
+!/.config/
+!/.config/fish/
+!/.config/fish/config.fish
+!/.emacs
+!/.emacs.d/
+!/.emacs.d/*
+!/.gitignore
+!/.gitconfig
+!/.vimrc
+!/.profile
+!/.inputrc
+!/.htoprc
+!/.bash_aliases
+!/.tmux.conf
+!/.ext/
+!/.ext/*
 !/.weechat/
 /.weechat/*
 !/.weechat/irc.conf
