same color for all borders

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,8 @@
+# change key
+#unbind C-b
+#set -g prefix C-.
+#bind-key C-. send-prefix
+
 # basic settings
 set-option -g status-keys emacs
 
@@ -28,8 +33,8 @@ set -g status-right '#(uptime | cut -d "," -f 2-) #(date "+%H:%M")'
 set -g status-right-length 64
 
 # border colours
-set -g pane-border-fg colour234
-set -g pane-active-border-fg colour236
+set -g pane-border-fg colour235
+set -g pane-active-border-fg colour235
 
 # highlight active window
 set-window-option -g window-status-current-bg red
