--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".emacs.d/yaml-mode"]
 	path = .emacs.d/yaml-mode
 	url = https://github.com/yoshiki/yaml-mode.git
+[submodule ".emacs.d/ecb"]
+	path = .emacs.d/ecb
+	url = https://github.com/emacsmirror/ecb
