--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,13 @@
+# Start new session.
+new-session
+
 # change key
 #unbind C-b
 #set -g prefix C-.
 #bind-key C-. send-prefix
+
+# send prefix
+bind-key b send-prefix
 
 # basic settings
 set-option -g status-keys emacs
