up history limit to 10 000

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,6 +9,9 @@ new-session
 # send prefix
 bind-key b send-prefix
 
+# scrollback buffer n lines
+set -g history-limit 10000
+
 # basic settings
 set-option -g status-keys emacs
 
