update weechat config

--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -1,5 +1,5 @@
 #
-# weechat.conf -- weechat v0.3.9.2
+# weechat.conf -- weechat v0.4.0
 #
 
 [debug]
@@ -34,7 +34,7 @@ confirm_quit = off
 day_change = on
 day_change_time_format = "%a, %d %b %Y"
 eat_newline_glitch = off
-highlight = "@all,@goteborg,@gothenburg,@sweden"
+highlight = ""
 highlight_regex = ""
 highlight_tags = ""
 hotlist_add_buffer_if_away = on
@@ -107,7 +107,7 @@ chat_host = cyan
 chat_inactive_buffer = darkgray
 chat_inactive_window = darkgray
 chat_nick = lightcyan
-chat_nick_colors = "cyan,magenta,green,brown,lightblue,default,lightcyan,lightmagenta,lightgreen,blue"
+chat_nick_colors = "cyan,magenta,green,brown,lightblue,default,lightcyan,lightmagenta,lightgreen,blue,31,35,38,40,49,63,70,80,92,99,112,126,130,138,142,148,160,162,167,169,174,176,178,184,186,210,212,215,247"
 chat_nick_offline = darkgray
 chat_nick_offline_highlight = default
 chat_nick_offline_highlight_bg = darkgray
@@ -204,7 +204,7 @@ input.type = window
 nicklist.color_bg = default
 nicklist.color_delim = cyan
 nicklist.color_fg = default
-nicklist.conditions = "nicklist"
+nicklist.conditions = "${nicklist}"
 nicklist.filling_left_right = vertical
 nicklist.filling_top_bottom = columns_vertical
 nicklist.hidden = off
@@ -222,7 +222,7 @@ status.conditions = ""
 status.filling_left_right = vertical
 status.filling_top_bottom = horizontal
 status.hidden = off
-status.items = "[time],[buffer_count],[buffer_plugin],buffer_number+:+buffer_name+{buffer_nicklist_count}+buffer_filter,[lag],[hotlist],completion,scroll"
+status.items = "[time],[buffer_count],[buffer_plugin],buffer_number+:+buffer_name+(buffer_modes)+{buffer_nicklist_count}+buffer_filter,[lag],[hotlist],completion,scroll"
 status.position = bottom
 status.priority = 500
 status.separator = off
@@ -464,6 +464,7 @@ meta-m = "/mute mouse toggle"
 meta-n = "/window scroll_next_highlight"
 meta-p = "/window scroll_previous_highlight"
 meta-r = "/input delete_line"
+meta-s = "/mute aspell toggle"
 meta-u = "/window scroll_unread"
 meta-wmeta-meta2-A = "/window up"
 meta-wmeta-meta2-B = "/window down"
@@ -475,6 +476,7 @@ meta-wmeta2-1;3C = "/window right"
 meta-wmeta2-1;3D = "/window left"
 meta-wmeta-b = "/window balance"
 meta-wmeta-s = "/window swap"
+meta-x = "/input zoom_merged_buffer"
 meta-z = "/window zoom"
 ctrl-_ = "/input undo"
 
@@ -515,6 +517,10 @@ meta2-D = "/cursor move left"
 @bar(nicklist):button1-gesture-down-long = "/bar scroll nicklist ${_window_number} e"
 @bar(nicklist):button1-gesture-up = "/bar scroll nicklist ${_window_number} -100%"
 @bar(nicklist):button1-gesture-up-long = "/bar scroll nicklist ${_window_number} b"
+@chat(script.scripts):button1 = "/window ${_window_number};/script go ${_chat_line_y}"
+@chat(script.scripts):button2 = "/window ${_window_number};/script go ${_chat_line_y};/script installremove -q ${script_name_with_extension}"
+@chat(script.scripts):wheeldown = "/script down 5"
+@chat(script.scripts):wheelup = "/script up 5"
 @item(buffer_nicklist):button1 = "/window ${_window_number};/query ${nick}"
 @item(buffer_nicklist):button1-gesture-left = "/window ${_window_number};/kick ${nick}"
 @item(buffer_nicklist):button1-gesture-left-long = "/window ${_window_number};/kickban ${nick}"
@@ -527,6 +533,8 @@ meta2-D = "/cursor move left"
 @chat:button1-gesture-left-long = "/window ${_window_number};/buffer 1"
 @chat:button1-gesture-right = "/window ${_window_number};/buffer +1"
 @chat:button1-gesture-right-long = "/window ${_window_number};/input jump_last_buffer"
+@chat:ctrl-wheeldown = "/window scroll_horiz -window ${_window_number} +10%"
+@chat:ctrl-wheelup = "/window scroll_horiz -window ${_window_number} -10%"
 @chat:wheeldown = "/window scroll_down -window ${_window_number}"
 @chat:wheelup = "/window scroll_up -window ${_window_number}"
 @*:button3 = "/cursor go ${_x},${_y}"
