--- a/.weechat/irc.conf
+++ b/.weechat/irc.conf
@@ -1,5 +1,5 @@
 #
-# irc.conf -- weechat v0.3.9.2
+# irc.conf -- weechat v0.4.0
 #
 
 [look]
@@ -71,6 +71,7 @@ topic_new = white
 topic_old = darkgray
 
 [network]
+alternate_nick = on
 autoreconnect_delay_growing = 2
 autoreconnect_delay_max = 1800
 colors_receive = on
@@ -82,6 +83,7 @@ lag_refresh_interval = 1
 notify_check_ison = 1
 notify_check_whois = 5
 send_unknown_commands = off
+whois_double_nick = on
 
 [msgbuffer]
 
@@ -107,7 +109,7 @@ command_delay = 0
 connection_timeout = 60
 default_msg_part = "WeeChat %v"
 default_msg_quit = "WeeChat %v"
-ipv6 = off
+ipv6 = on
 local_hostname = ""
 nicks = "logaritmisk"
 notify = ""
@@ -118,7 +120,7 @@ sasl_mechanism = plain
 sasl_password = ""
 sasl_timeout = 15
 sasl_username = ""
-ssl = on
+ssl = off
 ssl_cert = ""
 ssl_dhkey_size = 2048
 ssl_priorities = "NORMAL"
@@ -126,14 +128,14 @@ ssl_verify = on
 username = "olsson"
 
 [server]
-freenode.addresses = "chat.freenode.net/6697"
+freenode.addresses = "chat.freenode.net/6667"
 freenode.proxy
 freenode.ipv6
 freenode.ssl
 freenode.ssl_cert
 freenode.ssl_priorities
-freenode.ssl_dhkey_size = 1024
-freenode.ssl_verify = off
+freenode.ssl_dhkey_size
+freenode.ssl_verify
 freenode.password
 freenode.capabilities
 freenode.sasl_mechanism
@@ -141,7 +143,7 @@ freenode.sasl_username
 freenode.sasl_password
 freenode.sasl_timeout
 freenode.autoconnect = on
-freenode.autoreconnect
+freenode.autoreconnect = on
 freenode.autoreconnect_delay
 freenode.nicks
 freenode.username
