--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,12 @@
 # Start new session.
 new-session
 
+#set-option -g default-command "reattach-to-user-namespace -l bash"
+
+# start window index of 1
+set -g base-index 1
+setw -g pane-base-index 1
+
 # change key
 #unbind C-b
 #set -g prefix C-.
