--- a/.weechat/irc.conf
+++ b/.weechat/irc.conf
@@ -165,3 +165,37 @@ freenode.away_check_max_nicks
 freenode.default_msg_part
 freenode.default_msg_quit
 freenode.notify
+eu.link-net.org.addresses = "eu.link-net.org/7000"
+eu.link-net.org.proxy
+eu.link-net.org.ipv6
+eu.link-net.org.ssl = on
+eu.link-net.org.ssl_cert
+eu.link-net.org.ssl_priorities
+eu.link-net.org.ssl_dhkey_size
+eu.link-net.org.ssl_verify = off
+eu.link-net.org.password
+eu.link-net.org.capabilities
+eu.link-net.org.sasl_mechanism
+eu.link-net.org.sasl_username
+eu.link-net.org.sasl_password
+eu.link-net.org.sasl_timeout
+eu.link-net.org.autoconnect
+eu.link-net.org.autoreconnect
+eu.link-net.org.autoreconnect_delay
+eu.link-net.org.nicks
+eu.link-net.org.username
+eu.link-net.org.realname
+eu.link-net.org.local_hostname
+eu.link-net.org.command
+eu.link-net.org.command_delay
+eu.link-net.org.autojoin
+eu.link-net.org.autorejoin
+eu.link-net.org.autorejoin_delay
+eu.link-net.org.connection_timeout
+eu.link-net.org.anti_flood_prio_high
+eu.link-net.org.anti_flood_prio_low
+eu.link-net.org.away_check
+eu.link-net.org.away_check_max_nicks
+eu.link-net.org.default_msg_part
+eu.link-net.org.default_msg_quit
+eu.link-net.org.notify
