use link-net as default

--- a/.weechat/irc.conf
+++ b/.weechat/irc.conf
@@ -145,8 +145,8 @@ freenode.sasl_mechanism
 freenode.sasl_username
 freenode.sasl_password
 freenode.sasl_timeout
-freenode.autoconnect = on
-freenode.autoreconnect = on
+freenode.autoconnect
+freenode.autoreconnect
 freenode.autoreconnect_delay
 freenode.nicks
 freenode.username
@@ -179,10 +179,10 @@ eu.link-net.org.sasl_mechanism
 eu.link-net.org.sasl_username
 eu.link-net.org.sasl_password
 eu.link-net.org.sasl_timeout
-eu.link-net.org.autoconnect
-eu.link-net.org.autoreconnect
+eu.link-net.org.autoconnect = on
+eu.link-net.org.autoreconnect = on
 eu.link-net.org.autoreconnect_delay
-eu.link-net.org.nicks
+eu.link-net.org.nicks = "logaritm"
 eu.link-net.org.username
 eu.link-net.org.realname
 eu.link-net.org.local_hostname
