new version of weechat

--- a/.weechat/irc.conf
+++ b/.weechat/irc.conf
@@ -1,5 +1,5 @@
 #
-# irc.conf -- weechat v0.4.1-dev
+# irc.conf -- weechat v0.4.2-dev
 #
 
 [look]
@@ -34,18 +34,18 @@ msgbuffer_fallback = current
 new_channel_position = none
 new_pv_position = none
 nick_color_force = ""
+nick_color_hash = sum
 nick_color_stop_chars = "_|["
 nick_completion_smart = speakers
 nick_mode = prefix
 nick_mode_empty = off
-nick_prefix = ""
-nick_suffix = ""
 nicks_hide_password = "nickserv"
 notice_as_pv = auto
 notify_tags_ison = "notify_message"
 notify_tags_whois = "notify_message"
 part_closes_buffer = off
 pv_buffer = independent
+pv_tags = "notify_private"
 raw_messages = 256
 server_buffer = merge_with_core
 smart_filter = on
@@ -65,9 +65,7 @@ item_lag_finished = yellow
 message_join = green
 message_quit = red
 mirc_remap = "1,-1:darkgray"
-nick_prefix = green
 nick_prefixes = "q:lightred;a:lightcyan;o:lightgreen;h:lightmagenta;v:yellow;*:lightblue"
-nick_suffix = green
 notice = green
 reason_quit = default
 topic_new = white
@@ -182,7 +180,7 @@ eu.link-net.org.sasl_timeout
 eu.link-net.org.autoconnect = on
 eu.link-net.org.autoreconnect = on
 eu.link-net.org.autoreconnect_delay
-eu.link-net.org.nicks = "logaritm"
+eu.link-net.org.nicks
 eu.link-net.org.username
 eu.link-net.org.realname
 eu.link-net.org.local_hostname
