--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -1,5 +1,5 @@
 #
-# weechat.conf -- weechat v0.4.1-dev
+# weechat.conf -- weechat v0.4.2-dev
 #
 
 [debug]
@@ -34,6 +34,7 @@ confirm_quit = off
 day_change = on
 day_change_time_format = "%a, %d %b %Y"
 eat_newline_glitch = off
+emphasized_attributes = ""
 highlight = ""
 highlight_regex = ""
 highlight_tags = ""
@@ -45,8 +46,10 @@ hotlist_names_count = 3
 hotlist_names_length = 0
 hotlist_names_level = 12
 hotlist_names_merged_buffers = off
+hotlist_prefix = "H: "
 hotlist_short_names = on
 hotlist_sort = group_time_asc
+hotlist_suffix = ""
 hotlist_unique_numbers = on
 input_cursor_scroll = 20
 input_share = none
@@ -57,8 +60,11 @@ item_time_format = "%H:%M"
 jump_current_to_previous_buffer = on
 jump_previous_buffer_when_closing = on
 jump_smart_back_to_buffer = on
+key_bind_safe = on
 mouse = off
 mouse_timer_delay = 100
+nick_prefix = ""
+nick_suffix = ""
 paste_bracketed = off
 paste_bracketed_timer_delay = 10
 paste_max_lines = 1
@@ -67,9 +73,11 @@ prefix_align = right
 prefix_align_max = 0
 prefix_align_min = 0
 prefix_align_more = "+"
+prefix_align_more_after = on
 prefix_buffer_align = right
 prefix_buffer_align_max = 0
 prefix_buffer_align_more = "+"
+prefix_buffer_align_more_after = on
 prefix_error = "=!="
 prefix_join = "-->"
 prefix_network = "--"
@@ -112,7 +120,9 @@ chat_nick_offline = darkgray
 chat_nick_offline_highlight = default
 chat_nick_offline_highlight_bg = darkgray
 chat_nick_other = cyan
+chat_nick_prefix = green
 chat_nick_self = white
+chat_nick_suffix = green
 chat_prefix_action = white
 chat_prefix_buffer = brown
 chat_prefix_buffer_inactive_buffer = darkgray
@@ -131,6 +141,8 @@ chat_text_found_bg = lightmagenta
 chat_time = default
 chat_time_delimiters = brown
 chat_value = cyan
+emphasized = yellow
+emphasized_bg = magenta
 input_actions = lightgreen
 input_text_not_found = red
 nicklist_away = cyan
@@ -178,6 +190,7 @@ max_visited_buffers = 50
 connection_timeout = 60
 gnutls_ca_file = "/etc/ssl/certs/ca-certificates.crt"
 gnutls_handshake_timeout = 30
+proxy_curl = ""
 
 [plugin]
 autoload = "*"
